--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-  <div class="main_title"><h1>VOLVO</h1></div>
-  <div class="sub_title"><h2>Volvo Group</h2></div>
+  <div class="main_title"><h1>Simple</h1></div>
+  <div class="sub_title"><h2>Sample Group</h2></div>
 
   <nav class="navbar navbar-default">
     <div class="container-fluid">
